--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
@@ -43,5 +44,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://europe-west1-socialcritic-ee17c.cloudfunctions.net/api"
+  "proxy": "https://europe-west1-socialcritic-ee17c.cloudfunctions.net/api",
+  "devDependencies": {
+    "prettier": "2.2.1"
+  }
 }
