--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "dayjs": "^1.9.7",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.1",
+    "react-alert": "^7.0.2",
+    "react-alert-template-basic": "^1.0.0",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
